@@ -2,11 +2,11 @@
  *
  * DO NOT EDIT THIS FILE   (fixincl.x)
  *
- * It has been AutoGen-ed  August 21, 2019 at 07:47:23 PM by AutoGen 5.17.4
+ * It has been AutoGen-ed  January  1, 2020 at 11:59:56 AM by AutoGen 5.18.16
  * From the definitions    inclhack.def
  * and the template file   fixincl
  */
-/* DO NOT SVN-MERGE THIS FILE, EITHER Wed Aug 21 19:47:23 BST 2019
+/* DO NOT SVN-MERGE THIS FILE, EITHER Wed Jan  1 11:59:56 EST 2020
  *
  * You must regenerate it.  Use the ./genfixes script.
  *
@@ -15,7 +15,7 @@
  * certain ANSI-incompatible system header files which are fixed to work
  * correctly with ANSI C and placed in a directory that GNU C will search.
  *
- * This file contains 256 fixup descriptions.
+ * This file contains 257 fixup descriptions.
  *
  * See README for more information.
  *
@@ -5145,6 +5145,55 @@ static const char* apzHpux_C99_Inttypes2Patch[] = { sed_cmd_z,
     "-e", "s@^[ \t]*#[ \t]*define[ \t]*UINT8_C(__c)[ \t]*((unsigned char)(__c))[ \t]*$@#define UINT8_C(__c) (__c)@",
     "-e", "s@^[ \t]*#[ \t]*define[ \t]*INT16_C(__c)[ \t]*((short)(__c))[ \t]*$@#define INT16_C(__c) (__c)@",
     "-e", "s@^[ \t]*#[ \t]*define[ \t]*UINT16_C(__c)[ \t]*((unsigned short)(__c))[ \t]*$@#define UINT16_C(__c) (__c)@",
+    (char*)NULL };
+
+/* * * * * * * * * * * * * * * * * * * * * * * * * *
+ *
+ *  Description of Hpux_C99_Inttypes3 fix
+ */
+tSCC zHpux_C99_Inttypes3Name[] =
+     "hpux_c99_inttypes3";
+
+/*
+ *  File name selection pattern
+ */
+tSCC zHpux_C99_Inttypes3List[] =
+  "inttypes.h\0";
+/*
+ *  Machine/OS name selection pattern
+ */
+tSCC* apzHpux_C99_Inttypes3Machs[] = {
+        "hppa*-hp-hpux11*",
+        (const char*)NULL };
+
+/*
+ *  content selection pattern - do fix if pattern found
+ */
+tSCC zHpux_C99_Inttypes3Select0[] =
+       "#define[ \t]INTPTR_MAX[ \t]*\n\
+#define[ \t]UINTPTR_MAX[ \t]*\n";
+
+#define    HPUX_C99_INTTYPES3_TEST_CT  1
+static tTestDesc aHpux_C99_Inttypes3Tests[] = {
+  { TT_EGREP,    zHpux_C99_Inttypes3Select0, (regex_t*)NULL }, };
+
+/*
+ *  Fix Command Arguments for Hpux_C99_Inttypes3
+ */
+static const char* apzHpux_C99_Inttypes3Patch[] = {
+    "format",
+    "#undef SIZE_MAX\n\
+#define SIZE_MAX __SIZE_MAX__\n\
+#ifdef __INTPTR_MAX__\n\
+# undef INTPTR_MAX\n\
+# define INTPTR_MAX __INTPTR_MAX__\n\
+# undef INTPTR_MIN\n\
+# define INTPTR_MIN (-INTPTR_MAX - 1)\n\
+#endif\n\
+#ifdef __UINTPTR_MAX__\n\
+# undef UINTPTR_MAX\n\
+# define UINTPTR_MAX __UINTPTR_MAX__\n\
+#endif\n",
     (char*)NULL };
 
 /* * * * * * * * * * * * * * * * * * * * * * * * * *
@@ -10396,9 +10445,9 @@ static const char* apzX11_SprintfPatch[] = {
  *
  *  List of all fixes
  */
-#define REGEX_COUNT          295
+#define REGEX_COUNT          296
 #define MACH_LIST_SIZE_LIMIT 187
-#define FIX_COUNT            256
+#define FIX_COUNT            257
 
 /*
  *  Enumerate the fixes
@@ -10527,6 +10576,7 @@ typedef enum {
     HPUX_C99_INTPTR_FIXIDX,
     HPUX_C99_INTTYPES_FIXIDX,
     HPUX_C99_INTTYPES2_FIXIDX,
+    HPUX_C99_INTTYPES3_FIXIDX,
     HPUX_CTYPE_MACROS_FIXIDX,
     HPUX_EXTERN_ERRNO_FIXIDX,
     HPUX_HTONL_FIXIDX,
@@ -11277,6 +11327,11 @@ tFixDesc fixDescList[ FIX_COUNT ] = {
      apzHpux_C99_Inttypes2Machs,
      HPUX_C99_INTTYPES2_TEST_CT, FD_MACH_ONLY,
      aHpux_C99_Inttypes2Tests,   apzHpux_C99_Inttypes2Patch, 0 },
+
+  {  zHpux_C99_Inttypes3Name,    zHpux_C99_Inttypes3List,
+     apzHpux_C99_Inttypes3Machs,
+     HPUX_C99_INTTYPES3_TEST_CT, FD_MACH_ONLY | FD_SUBROUTINE,
+     aHpux_C99_Inttypes3Tests,   apzHpux_C99_Inttypes3Patch, 0 },
 
   {  zHpux_Ctype_MacrosName,    zHpux_Ctype_MacrosList,
      apzHpux_Ctype_MacrosMachs,
